Renamed the utilities directory agents.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -266,7 +266,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <pre class="element procedure">size + 1</pre>
+                                        <pre class="element code">size + 1</pre>
                                     </div>
                                 </div>
                                 <div class="association">
@@ -523,7 +523,7 @@
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <pre class="element procedure">{
+                                        <pre class="element code">{
     if condition then {
         return true
     } else {
@@ -544,17 +544,17 @@
                             <div class="list">
                                 <div class="type">List</div>
                                 <div class="item">
-                                    <pre class="element procedure">{
+                                    <pre class="element code">{
 }</pre>
                                 </div>
                                 <div class="item">
-                                    <pre class="element procedure">{
+                                    <pre class="element code">{
     $foo := bar
     $bar := baz
 } (bar: baz)</pre>
                                 </div>
                                 <div class="item">
-                                    <pre class="element procedure">{
+                                    <pre class="element code">{
     if condition then {
         $x := y
     } else {
