--- a/test/html/test.html
+++ b/test/html/test.html
@@ -47,7 +47,7 @@
                         </div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <pre class="element procedure">{
+                            <pre class="element code">{
     if suitor IS "Mr. Darcy" then {
         return true
     } else {
