Refactored the Range class to be a collection that accepts expressions for its first and last items.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -182,7 +182,7 @@
                                                     </div>
                                                     <div class="colon">:</div>
                                                     <div class="value">
-                                                        <div class="element number">25 (range: 1..100)</div>
+                                                        <div class="element number">25 (range: [1..100])</div>
                                                     </div>
                                                 </div>
                                                 <div class="association">
