Added more checks for negative constants.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -136,6 +136,9 @@
                                             <div class="element number">∞</div>
                                         </div>
                                         <div class="item">
+                                            <div class="element number">-π</div>
+                                        </div>
+                                        <div class="item">
                                             <div class="element angle">~π</div>
                                         </div>
                                         <div class="item">
@@ -475,7 +478,7 @@
                                                 </div>
                                                 <div class="colon">:</div>
                                                 <div class="value">
-                                                    <div class="element number">π</div>
+                                                    <div class="element number">-π</div>
                                                 </div>
                                             </div>
                                             <div class="association">
