Fixed bug in how the Catalog constructor sets the type. Exporting bali.component.validateArgument() and bali.component.normalizedIndex() functions in the index.js file.

--- a/test/html/certificate.html
+++ b/test/html/certificate.html
@@ -7,7 +7,7 @@
         <div class="document">
             <div class="value">
                 <div class="catalog">
-                    <div class="type">Contract</div>
+                    <div class="type">Catalog</div>
                     <div class="association">
                         <div class="key" style="width:13ch">
                             <div class="element symbol">protocol</div>
@@ -42,7 +42,7 @@
                         <div class="colon">:</div>
                         <div class="value">
                             <div class="catalog">
-                                <div class="type">Certificate</div>
+                                <div class="type">Catalog</div>
                                 <div class="association">
                                     <div class="key" style="width:12ch">
                                         <div class="element symbol">publicKey</div>
