--- a/test/html/citation.html
+++ b/test/html/citation.html
@@ -7,7 +7,7 @@
         <div class="document">
             <div class="value">
                 <div class="catalog">
-                    <div class="type">Citation</div>
+                    <div class="type">Catalog</div>
                     <div class="association">
                         <div class="key" style="width:11ch">
                             <div class="element symbol">protocol</div>
