Fixed another problem with how exceptions are parsed and formatted.

--- a/test/html/components.html
+++ b/test/html/components.html
@@ -462,7 +462,7 @@
                                     <div class="colon">:</div>
                                     <div class="value">
                                         <div class="catalog">
-                                            <div class="type">Catalog</div>
+                                            <div class="type">Foo</div>
                                             <div class="association">
                                                 <div class="key" style="width:3ch">
                                                     <div class="element symbol">a</div>
