--- a/test/html/examples.html
+++ b/test/html/examples.html
@@ -7,7 +7,7 @@
         <div class="document">
             <div class="value">
                 <div class="catalog">
-                    <div class="type">Catalog</div>
+                    <div class="type">Transaction</div>
                     <div class="association">
                         <div class="key" style="width:15ch">
                             <div class="element symbol">transactionId</div>
