Added unit tests for formatting and parsing iterators.  The node iterator cannot be formatted into a legal grammar construct so it does not support formatting.

--- a/test/html/agents.html
+++ b/test/html/agents.html
@@ -9,8 +9,8 @@
                 <div class="catalog">
                     <div class="type">Catalog</div>
                     <div class="association">
-                        <div class="key" style="width:11ch">
-                            <div class="element symbol">exception</div>
+                        <div class="key" style="width:12ch">
+                            <div class="element symbol">single</div>
                         </div>
                         <div class="colon">:</div>
                         <div class="value">
@@ -18,39 +18,131 @@
                                 <div class="type">Catalog</div>
                                 <div class="association">
                                     <div class="key" style="width:11ch">
-                                        <div class="element symbol">module</div>
-                                    </div>
-                                    <div class="colon">:</div>
-                                    <div class="value">
-                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Collection">/bali/abstractions/Collection</a></div>
-                                    </div>
-                                </div>
-                                <div class="association">
-                                    <div class="key" style="width:11ch">
-                                        <div class="element symbol">procedure</div>
-                                    </div>
-                                    <div class="colon">:</div>
-                                    <div class="value">
-                                        <div class="element symbol">toArray</div>
-                                    </div>
-                                </div>
-                                <div class="association">
-                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">exception</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="element symbol">abstractMethod</div>
+                                        <div class="catalog">
+                                            <div class="type">Catalog</div>
+                                            <div class="association">
+                                                <div class="key" style="width:11ch">
+                                                    <div class="element symbol">module</div>
+                                                </div>
+                                                <div class="colon">:</div>
+                                                <div class="value">
+                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Collection">/bali/abstractions/Collection</a></div>
+                                                </div>
+                                            </div>
+                                            <div class="association">
+                                                <div class="key" style="width:11ch">
+                                                    <div class="element symbol">procedure</div>
+                                                </div>
+                                                <div class="colon">:</div>
+                                                <div class="value">
+                                                    <div class="element symbol">toArray</div>
+                                                </div>
+                                            </div>
+                                            <div class="association">
+                                                <div class="key" style="width:11ch">
+                                                    <div class="element symbol">exception</div>
+                                                </div>
+                                                <div class="colon">:</div>
+                                                <div class="value">
+                                                    <div class="element symbol">abstractMethod</div>
+                                                </div>
+                                            </div>
+                                            <div class="association">
+                                                <div class="key" style="width:11ch">
+                                                    <div class="element symbol">text</div>
+                                                </div>
+                                                <div class="colon">:</div>
+                                                <div class="value">
+                                                    <pre class="element text">
+"An abstract method must be implemented by a subclass."</pre>
+                                                </div>
+                                            </div>
+                                        </div><div class="parameters">
+                                        <div class="type">Parameters</div><div class="association">
+                                                <div class="key" style="width:5ch">
+                                                    <div class="element symbol">type</div></div>
+                                                <div class="colon">:</div>
+                                                <div class="value">
+                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Exception/v1">/bali/abstractions/Exception/v1</a></div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="association">
+                        <div class="key" style="width:12ch">
+                            <div class="element symbol">nested</div>
+                        </div>
+                        <div class="colon">:</div>
+                        <div class="value">
+                            <div class="catalog">
+                                <div class="type">Catalog</div>
                                 <div class="association">
-                                    <div class="key" style="width:11ch">
-                                        <div class="element symbol">text</div>
+                                    <div class="key" style="width:7ch">
+                                        <div class="element symbol">foo</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
                                         <pre class="element text">
-"An abstract method must be implemented by a subclass."</pre>
+"bar"</pre>
+                                    </div>
+                                </div>
+                                <div class="association">
+                                    <div class="key" style="width:7ch">
+                                        <div class="element symbol">trace</div>
+                                    </div>
+                                    <div class="colon">:</div>
+                                    <div class="value">
+                                        <div class="list">
+                                            <div class="type">List</div>
+                                            <div class="item">
+                                                <div class="catalog">
+                                                    <div class="type">Catalog</div>
+                                                    <div class="association">
+                                                        <div class="key" style="width:5ch">
+                                                            <div class="element symbol">cas</div>
+                                                        </div>
+                                                        <div class="colon">:</div>
+                                                        <div class="value">
+                                                            <pre class="element text">
+"baw"</pre>
+                                                        </div>
+                                                    </div>
+                                                </div><div class="parameters">
+                                                <div class="type">Parameters</div><div class="association">
+                                                        <div class="key" style="width:5ch">
+                                                            <div class="element symbol">type</div></div>
+                                                        <div class="colon">:</div>
+                                                        <div class="value">
+                                                            <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Exception/v1">/bali/abstractions/Exception/v1</a></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="item">
+                                                <pre class="element text">
+"
+    Error: A raw error...
+    at Context.<anonymous> (/Users/derk/Develo..-framework/test/TestAngle.js:22:89)
+    at callFn (/Users/derk/Development/craterd..dules/mocha/lib/runnable.js:366:21)
+    at Test.Runnable.run (/Users/derk/Developm..odules/mocha/lib/runnable.js:354:5)
+    at Runner.runTest (/Users/derk/Development..modules/mocha/lib/runner.js:681:10)
+    at /Users/derk/Development/craterdog-bali/.._modules/mocha/lib/runner.js:804:12
+    at next (/Users/derk/Development/craterdog..modules/mocha/lib/runner.js:596:14)
+    at /Users/derk/Development/craterdog-bali/..e_modules/mocha/lib/runner.js:606:7
+    at next (/Users/derk/Development/craterdog..modules/mocha/lib/runner.js:489:14)
+    at Immediate._onImmediate (/Users/derk/Dev.._modules/mocha/lib/runner.js:574:5)
+    at processImmediate (node:internal/timers:464:21)
+"</pre>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div><div class="parameters">
@@ -63,6 +155,114 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="association">
+                        <div class="key" style="width:12ch">
+                            <div class="element symbol">comparable</div>
+                        </div>
+                        <div class="colon">:</div>
+                        <div class="value">
+                            <div class="catalog">
+                                <div class="type">Comparable</div>
+                            </div><div class="parameters">
+                            <div class="type">Parameters</div><div class="association">
+                                    <div class="key" style="width:5ch">
+                                        <div class="element symbol">type</div></div>
+                                    <div class="colon">:</div>
+                                    <div class="value">
+                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Comparable/v1">/bali/abstractions/Comparable/v1</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="association">
+                        <div class="key" style="width:12ch">
+                            <div class="element symbol">sortable</div>
+                        </div>
+                        <div class="colon">:</div>
+                        <div class="value">
+                            <div class="catalog">
+                                <div class="type">Sortable</div>
+                                <div class="association">
+                                    <div class="key" style="width:12ch">
+                                        <div class="element symbol">comparable</div>
+                                    </div>
+                                    <div class="colon">:</div>
+                                    <div class="value">
+                                        <div class="catalog">
+                                            <div class="type">Comparable</div>
+                                        </div><div class="parameters">
+                                        <div class="type">Parameters</div><div class="association">
+                                                <div class="key" style="width:5ch">
+                                                    <div class="element symbol">type</div></div>
+                                                <div class="colon">:</div>
+                                                <div class="value">
+                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Comparable/v1">/bali/abstractions/Comparable/v1</a></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div><div class="parameters">
+                            <div class="type">Parameters</div><div class="association">
+                                    <div class="key" style="width:5ch">
+                                        <div class="element symbol">type</div></div>
+                                    <div class="colon">:</div>
+                                    <div class="value">
+                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Sortable/v1">/bali/abstractions/Sortable/v1</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="association">
+                        <div class="key" style="width:12ch">
+                            <div class="element symbol">collection</div>
+                        </div>
+                        <div class="colon">:</div>
+                        <div class="value">
+                            [
+                                $slot: <div class="element number">0</div>$sequence: <div class="list">
+                                    <div class="type">List</div>
+                                    <div class="item">
+                                        <div class="element symbol">alpha</div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="element symbol">beta</div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="element symbol">gamma</div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="element symbol">delta</div>
+                                    </div>
+                                </div>
+                            ]($type: /bali/abstractions/CollectionIterator/v1)
+                        </div>
+                    </div>
+                    <div class="association">
+                        <div class="key" style="width:12ch">
+                            <div class="element symbol">range</div>
+                        </div>
+                        <div class="colon">:</div>
+                        <div class="value">
+                            [
+                                $slot: <div class="element number">1</div>$sequence: <div class="range"><div class="element number">1</div>..<div class="element number">5</div></div>
+                            ]($type: /bali/collections/RangeIterator/v1)
+                        </div>
+                    </div>
+                    <div class="association">
+                        <div class="key" style="width:12ch">
+                            <div class="element symbol">string</div>
+                        </div>
+                        <div class="colon">:</div>
+                        <div class="value">
+                            [
+                                $slot: <div class="element number">-1</div>$sequence: <pre class="element text">
+"This is a string..."</pre>
+                            ]($type: /bali/abstractions/StringIterator/v1)
                         </div>
                     </div>
                 </div>
