--- a/test/html/agents.html
+++ b/test/html/agents.html
@@ -18,59 +18,48 @@
                                 <div class="type">Catalog</div>
                                 <div class="association">
                                     <div class="key" style="width:11ch">
+                                        <div class="element symbol">module</div>
+                                    </div>
+                                    <div class="colon">:</div>
+                                    <div class="value">
+                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Collection">/bali/abstractions/Collection</a></div>
+                                    </div>
+                                </div>
+                                <div class="association">
+                                    <div class="key" style="width:11ch">
+                                        <div class="element symbol">procedure</div>
+                                    </div>
+                                    <div class="colon">:</div>
+                                    <div class="value">
+                                        <div class="element symbol">toArray</div>
+                                    </div>
+                                </div>
+                                <div class="association">
+                                    <div class="key" style="width:11ch">
                                         <div class="element symbol">exception</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="catalog">
-                                            <div class="type">Catalog</div>
-                                            <div class="association">
-                                                <div class="key" style="width:11ch">
-                                                    <div class="element symbol">module</div>
-                                                </div>
-                                                <div class="colon">:</div>
-                                                <div class="value">
-                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Collection">/bali/abstractions/Collection</a></div>
-                                                </div>
-                                            </div>
-                                            <div class="association">
-                                                <div class="key" style="width:11ch">
-                                                    <div class="element symbol">procedure</div>
-                                                </div>
-                                                <div class="colon">:</div>
-                                                <div class="value">
-                                                    <div class="element symbol">toArray</div>
-                                                </div>
-                                            </div>
-                                            <div class="association">
-                                                <div class="key" style="width:11ch">
-                                                    <div class="element symbol">exception</div>
-                                                </div>
-                                                <div class="colon">:</div>
-                                                <div class="value">
-                                                    <div class="element symbol">abstractMethod</div>
-                                                </div>
-                                            </div>
-                                            <div class="association">
-                                                <div class="key" style="width:11ch">
-                                                    <div class="element symbol">text</div>
-                                                </div>
-                                                <div class="colon">:</div>
-                                                <div class="value">
-                                                    <pre class="element text">
+                                        <div class="element symbol">abstractMethod</div>
+                                    </div>
+                                </div>
+                                <div class="association">
+                                    <div class="key" style="width:11ch">
+                                        <div class="element symbol">text</div>
+                                    </div>
+                                    <div class="colon">:</div>
+                                    <div class="value">
+                                        <pre class="element text">
 "An abstract method must be implemented by a subclass."</pre>
-                                                </div>
-                                            </div>
-                                        </div><div class="parameters">
-                                        <div class="type">Parameters</div><div class="association">
-                                                <div class="key" style="width:5ch">
-                                                    <div class="element symbol">type</div></div>
-                                                <div class="colon">:</div>
-                                                <div class="value">
-                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Exception/v1">/bali/abstractions/Exception/v1</a></div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                    </div>
+                                </div>
+                            </div><div class="parameters">
+                            <div class="type">Parameters</div><div class="association">
+                                    <div class="key" style="width:5ch">
+                                        <div class="element symbol">type</div></div>
+                                    <div class="colon">:</div>
+                                    <div class="value">
+                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Exception/v1">/bali/abstractions/Exception/v1</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -159,62 +148,22 @@
                     </div>
                     <div class="association">
                         <div class="key" style="width:12ch">
-                            <div class="element symbol">comparable</div>
+                            <div class="element symbol">comparator</div>
                         </div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <div class="catalog">
-                                <div class="type">Comparable</div>
-                            </div><div class="parameters">
-                            <div class="type">Parameters</div><div class="association">
-                                    <div class="key" style="width:5ch">
-                                        <div class="element symbol">type</div></div>
-                                    <div class="colon">:</div>
-                                    <div class="value">
-                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Comparable/v1">/bali/abstractions/Comparable/v1</a></div>
-                                    </div>
-                                </div>
-                            </div>
+                            [:]($type: /bali/agents/CanonicalComparator/v1)
                         </div>
                     </div>
                     <div class="association">
                         <div class="key" style="width:12ch">
-                            <div class="element symbol">sortable</div>
+                            <div class="element symbol">sorter</div>
                         </div>
                         <div class="colon">:</div>
                         <div class="value">
-                            <div class="catalog">
-                                <div class="type">Sortable</div>
-                                <div class="association">
-                                    <div class="key" style="width:12ch">
-                                        <div class="element symbol">comparable</div>
-                                    </div>
-                                    <div class="colon">:</div>
-                                    <div class="value">
-                                        <div class="catalog">
-                                            <div class="type">Comparable</div>
-                                        </div><div class="parameters">
-                                        <div class="type">Parameters</div><div class="association">
-                                                <div class="key" style="width:5ch">
-                                                    <div class="element symbol">type</div></div>
-                                                <div class="colon">:</div>
-                                                <div class="value">
-                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Comparable/v1">/bali/abstractions/Comparable/v1</a></div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div><div class="parameters">
-                            <div class="type">Parameters</div><div class="association">
-                                    <div class="key" style="width:5ch">
-                                        <div class="element symbol">type</div></div>
-                                    <div class="colon">:</div>
-                                    <div class="value">
-                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Sortable/v1">/bali/abstractions/Sortable/v1</a></div>
-                                    </div>
-                                </div>
-                            </div>
+                            [
+                                $comparator: [:]($type: /bali/agents/CanonicalComparator/v1)
+                            ]($type: /bali/agents/MergeSorter/v1)
                         </div>
                     </div>
                     <div class="association">
@@ -260,7 +209,7 @@
                         <div class="colon">:</div>
                         <div class="value">
                             [
-                                $slot: <div class="element number">-1</div>$sequence: <pre class="element text">
+                                $slot: <div class="element number">2</div>$sequence: <pre class="element text">
 "This is a string..."</pre>
                             ]($type: /bali/abstractions/StringIterator/v1)
                         </div>
