Fixed problems with how iterators handle negative slots.

--- a/test/html/agents.html
+++ b/test/html/agents.html
@@ -173,7 +173,8 @@
                         <div class="colon">:</div>
                         <div class="value">
                             [
-                                $slot: <div class="element number">0</div>$sequence: <div class="list">
+                                $slot: 0
+                                $sequence: <div class="list">
                                     <div class="type">List</div>
                                     <div class="item">
                                         <div class="element symbol">alpha</div>
@@ -198,7 +199,8 @@
                         <div class="colon">:</div>
                         <div class="value">
                             [
-                                $slot: <div class="element number">1</div>$sequence: <div class="range"><div class="element number">1</div>..<div class="element number">5</div></div>
+                                $slot: 1
+                                $sequence: <div class="range"><div class="element number">1</div>..<div class="element number">5</div></div>
                             ]($type: /bali/collections/RangeIterator/v1)
                         </div>
                     </div>
@@ -209,7 +211,8 @@
                         <div class="colon">:</div>
                         <div class="value">
                             [
-                                $slot: <div class="element number">2</div>$sequence: <pre class="element text">
+                                $slot: 19
+                                $sequence: <pre class="element text">
 "This is a string..."</pre>
                             ]($type: /bali/abstractions/StringIterator/v1)
                         </div>
