Refactored the exception attribute structure.

--- a/test/html/agents.html
+++ b/test/html/agents.html
@@ -17,40 +17,40 @@
                             <div class="catalog">
                                 <div class="type">Catalog</div>
                                 <div class="association">
-                                    <div class="key" style="width:11ch">
-                                        <div class="element symbol">module</div>
-                                    </div>
-                                    <div class="colon">:</div>
-                                    <div class="value">
-                                        <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Collection">/bali/abstractions/Collection</a></div>
-                                    </div>
-                                </div>
-                                <div class="association">
-                                    <div class="key" style="width:11ch">
-                                        <div class="element symbol">procedure</div>
-                                    </div>
-                                    <div class="colon">:</div>
-                                    <div class="value">
-                                        <div class="element symbol">toArray</div>
-                                    </div>
-                                </div>
-                                <div class="association">
-                                    <div class="key" style="width:11ch">
-                                        <div class="element symbol">exception</div>
-                                    </div>
-                                    <div class="colon">:</div>
-                                    <div class="value">
-                                        <div class="element symbol">abstractMethod</div>
-                                    </div>
-                                </div>
-                                <div class="association">
-                                    <div class="key" style="width:11ch">
-                                        <div class="element symbol">text</div>
+                                    <div class="key" style="width:7ch">
+                                        <div class="element symbol">foo</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
                                         <pre class="element text">
-"An abstract method must be implemented by a subclass."</pre>
+"bar"</pre>
+                                    </div>
+                                </div>
+                                <div class="association">
+                                    <div class="key" style="width:7ch">
+                                        <div class="element symbol">cause</div>
+                                    </div>
+                                    <div class="colon">:</div>
+                                    <div class="value">
+                                        <div class="list">
+                                            <div class="type">List</div>
+                                            <div class="item">
+                                                <pre class="element text">
+"
+    Error
+    at new Exception (/Users/derk/Development/..c/abstractions/Component.js:412:38)
+    at Object.exception (/Users/derk/Developme..omponent-framework/index.js:369:16)
+    at Context.<anonymous> (/Users/derk/Develo..-framework/test/TestAngle.js:22:32)
+    at callFn (/Users/derk/Development/craterd..dules/mocha/lib/runnable.js:366:21)
+    at Test.Runnable.run (/Users/derk/Developm..odules/mocha/lib/runnable.js:354:5)
+    at Runner.runTest (/Users/derk/Development..modules/mocha/lib/runner.js:681:10)
+    at /Users/derk/Development/craterdog-bali/.._modules/mocha/lib/runner.js:804:12
+    at next (/Users/derk/Development/craterdog..modules/mocha/lib/runner.js:596:14)
+    at /Users/derk/Development/craterdog-bali/..e_modules/mocha/lib/runner.js:606:7
+    at next (/Users/derk/Development/craterdog..modules/mocha/lib/runner.js:489:14)
+"</pre>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div><div class="parameters">
@@ -85,41 +85,35 @@
                                 </div>
                                 <div class="association">
                                     <div class="key" style="width:7ch">
-                                        <div class="element symbol">trace</div>
+                                        <div class="element symbol">cause</div>
                                     </div>
                                     <div class="colon">:</div>
                                     <div class="value">
-                                        <div class="list">
-                                            <div class="type">List</div>
-                                            <div class="item">
-                                                <div class="catalog">
-                                                    <div class="type">Catalog</div>
-                                                    <div class="association">
-                                                        <div class="key" style="width:5ch">
-                                                            <div class="element symbol">cas</div>
-                                                        </div>
-                                                        <div class="colon">:</div>
-                                                        <div class="value">
-                                                            <pre class="element text">
+                                        <div class="catalog">
+                                            <div class="type">Catalog</div>
+                                            <div class="association">
+                                                <div class="key" style="width:7ch">
+                                                    <div class="element symbol">caz</div>
+                                                </div>
+                                                <div class="colon">:</div>
+                                                <div class="value">
+                                                    <pre class="element text">
 "baw"</pre>
-                                                        </div>
-                                                    </div>
-                                                </div><div class="parameters">
-                                                <div class="type">Parameters</div><div class="association">
-                                                        <div class="key" style="width:5ch">
-                                                            <div class="element symbol">type</div></div>
-                                                        <div class="colon">:</div>
-                                                        <div class="value">
-                                                            <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Exception/v1">/bali/abstractions/Exception/v1</a></div>
-                                                        </div>
-                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="item">
-                                                <pre class="element text">
+                                            <div class="association">
+                                                <div class="key" style="width:7ch">
+                                                    <div class="element symbol">cause</div>
+                                                </div>
+                                                <div class="colon">:</div>
+                                                <div class="value">
+                                                    <div class="list">
+                                                        <div class="type">List</div>
+                                                        <div class="item">
+                                                            <pre class="element text">
 "
-    Error: A raw error...
-    at Context.<anonymous> (/Users/derk/Develo..-framework/test/TestAngle.js:22:89)
+    Error: Raw error...
+    at Context.<anonymous> (/Users/derk/Develo..-framework/test/TestAngle.js:22:91)
     at callFn (/Users/derk/Development/craterd..dules/mocha/lib/runnable.js:366:21)
     at Test.Runnable.run (/Users/derk/Developm..odules/mocha/lib/runnable.js:354:5)
     at Runner.runTest (/Users/derk/Development..modules/mocha/lib/runner.js:681:10)
@@ -130,6 +124,18 @@
     at Immediate._onImmediate (/Users/derk/Dev.._modules/mocha/lib/runner.js:574:5)
     at processImmediate (node:internal/timers:464:21)
 "</pre>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div><div class="parameters">
+                                        <div class="type">Parameters</div><div class="association">
+                                                <div class="key" style="width:5ch">
+                                                    <div class="element symbol">type</div></div>
+                                                <div class="colon">:</div>
+                                                <div class="value">
+                                                    <div class="element name"><a href="https://bali-nebula.net/repository/names/bali/abstractions/Exception/v1">/bali/abstractions/Exception/v1</a></div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
